# NeoChess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chess_game
src/: main.cpp
src/ai/: EvaluationEngine.cpp  EvaluationEngine.h
src/core/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  ChessTypes.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.cpp  Move.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/player/: AIPlayer.cpp  AIPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h
src/ui/: TextDisplay.cpp  TextDisplay.h
